# perceive_py

./: .gitignore  README.md  pyproject.toml
perceive_py/: create_fair_rota.py  create_rota.py  create_synthetic_data.py  fibanocci_iter.py  flags_threadpool.py  flags_threadpool_futures.py  flags_threadpool_process.py  knowasync.py  knowasyncio.py  knowdecorator.py  knowiter.py  knowiterable.py  knowprocess.py  knowpy.py  knowpydantic.py  knowthreads.py  main.py  process_large_data.py  read_parallel.py  recursive.py  sequential_downloads.py  splitting.py  utils.py
tests/unit/: fixtures.py  test_fibanocci_iter.py  test_knowiter.py  test_knowiterable.py  test_knowpydantic.py  test_process_large_data.py
